include burger and translate

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,35 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vyfe</string>
-    <string name="video_tittle">Video Title : </string>
-    <string name="video_info">Informations</string>
-    <string name="no_description">No description</string>
-    <string name="play_video">Play video</string>
+    <string name="video_tittle">Video Title </string>
+    <string name="video_info">Video information</string>
+    <string name="no_description">No description </string>
+    <string name="description">Description: </string>
+    <string name="play_video">Play</string>
     <string name="edit">Edit</string>
     <string name="upload">Upload</string>
-    <string name="information">Informations</string>
-    <string name="title_video">Video Title</string>
-    <string name="start_session">Start session</string>
-    <string name="start_multi_session">Start multi session</string>
+    <string name="information">Information</string>
+    <string name="title_video">Video title</string>
+    <string name="start_session">Launch a session</string>
+    <string name="start_multi_session">Launch collaborative session</string>
     <string name="my_videos">My videos</string>
     <string name="search">Search</string>
     <string name="hello_user">Hello</string>
     <string name="connected">Connection</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="lost_password">lost password</string>
-    <string name="connected_maj">Log in</string>
-    <string name="info_session">Informations session</string>
+    <string name="lost_password">Forgot password?</string>
+    <string name="connected_maj">Log in </string>
+    <string name="info_session">Session information</string>
     <string name="add_description">Add description</string>
-    <string name="my_analyse">My analysis window</string>
-    <string name="create_tags">Add Event</string>
-    <string name="go">GO</string>
+    <string name="my_analyse">My analysis grid</string>
+    <string name="grid_title">Grid Title</string>
+    <string name="create_tags">Add tag</string>
+    <string name="go">Go</string>
     <string name="back">Back</string>
-    <string name="share_url">Share URL</string>
+    <string name="share_url">Share URL to your learners</string>
+    <string name="url">http://vyfe.co/live/356</string>
     <string name="category">Category</string>
-    <string name="name_observation">Name observation</string>
+    <string name="name_observation">Observation name</string>
     <string name="avatar">avatar</string>
-    <string name="new_grid">New analysis</string>
+    <string name="new_grid">New grid analysis</string>
     <string name="choose_color">Chose your color</string>
     <string name="name">Name</string>
     <string name="color">Color</string>
@@ -38,91 +40,145 @@
     <string name="end">End</string>
     <string name="tag_name">Tag name</string>
     <string name="tag_color">Tag color</string>
-    <string name="def_color">Choose a tag name and a color</string>
-    <string name="grid_import">Import an analysis window</string>
-    <string name="new_grid2">Create a new analysis window</string>
+    <string name="def_color" translatable="false">Chose a name and color tag</string>
+    <string name="grid_import">Chose your analysis grid :</string>
+    <string name="new_grid2">Create a new analysis grid</string>
     <string name="move">Move tag</string>
     <string name="delete_tag">Delete tag</string>
-    <string name="infos_video">Video informations</string>
+    <string name="infos_video">Video information</string>
     <string name="video_name">Video Name</string>
     <string name="record_session">Record a session</string>
-    <string name="modif_tags">Add or modify tag</string>
-    <string name="add_tags">Add tag</string>
-    <string name="edit_tags">Edit tag</string>
+    <string name="modif_tags">Add or edit tag</string>
+    <string name="add_tags">Add tags</string>
+    <string name="edit_tags">Edit tags</string>
     <string name="next">Next</string>
-    <string name="video_save">Session saved in your video</string>
-    <string name="back_to_main">Back to main</string>
-    <string name="show_video">Show video</string>
-    <string name="confirm_delete_video">Confirm Delete video</string>
+    <string name="video_save">Session saved in your videos</string>
+    <string name="back_to_main">Home</string>
+    <string name="show_video">View</string>
+    <string name="confirm_delete_video">Do you want to delete this video?</string>
     <string name="cancel">Cancel</string>
-    <string name="delete">Delete</string>
-    <string name="wait_few_minutes">wait few minutes</string>
-    <string name="save_in_progress">Save in progress</string>
-    <string name="bad_authentifiaction">Bad authentification</string>
-    <string name="havent_video">You have no video yet</string>
-    <string name="logout">Log out</string>
+    <string name="delete_app">Delete video from device</string>
+    <string name="wait_few_minutes">It can take few minutes...</string>
+    <string name="save_in_progress">Save in progress...</string>
+    <string name="bad_authentifiaction"> Authentication failed. Check your email and password </string>
+    <string name="havent_video">No video yet</string>
+    <string name="logout">Logout</string>
     <string name="enter_email">Enter email</string>
-    <string name="enter_password">Enter password</string>
+    <string name="enter_password">Enter a password</string>
     <string name="mail_send">Email sent</string>
-    <string name="mail_unkown">Email unknown</string>
+    <string name="mail_unkown">Unknown email</string>
     <string name="send">Send</string>
     <string name="timestamp">Date</string>
-    <string name="contact">Contact us: www.vyfe.fr</string>
+    <string name="contact">Contact us : <u>www.vyfe.fr</u></string>
     <string name="create_account">Create an account</string>
-    <string name="havent_grid">You have no analysis window yet</string>
-    <string name="havent_tag">You have no tag</string>
+    <string name="havent_grid">You have no analysis grid yet</string>
+    <string name="havent_tag">You have no tag yet</string>
     <string name="description_added">Description added</string>
-    <string name="title">Please inform a title of video</string>
-    <string name="double_name">Name already used. Please inform a new name</string>
-    <string name="upload_video">Your video is uploaded</string>
+    <string name="title">Please insert a video title</string>
+    <string name="double_name">Name already used. Please use a new name</string>
+    <string name="upload_video">Your video has been uploaded</string>
     <string name="error">error :</string>
     <string name="quit_app">Do you want to leave the app?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="import_grid_arrow">Import an analysis window</string>
-    <string name="choose_name_grid">Choose name for your analysis window</string>
-    <string name="empty_grid">Select tag or analysis window</string>
-    <string name="grid_title">Grid title</string>
+    <string name="import_grid_arrow">Select a grid</string>
+    <string name="arrow"> \ \ \ ▼</string>
+    <string name="choose_name_grid">Chose a name for your grid:</string>
+    <string name="empty_grid">Select tag or grid</string>
     <string name="title_session">Video title :</string>
     <string name="add_tag">Add tag</string>
     <string name="restart_session">Restart session</string>
-    <string name="deconnected">Do you want to disconnect you?</string>
-    <string name="active_wifi">You need a wifi connection for your identification</string>
-    <string name="expired_month">You still have one month to use this wonderful app!</string>
-    <string name="expired_7_days">Be careful, this app will destroy itself in 7 days ;)</string>
-    <string name="expired_day">It is your last day to use Vyfe App!</string>
-    <string name="invalid_date">Invalid Date</string>
-    <string name="expired_licence">Your licence has expired, thanks to contact us</string>
+    <string name="deconnected">Do you want to logout ?</string>
+    <string name="active_wifi">You must have a Wifi connection to identify</string>
+    <string name="wifi_active">You must activate your Wifi to start a collaborative session</string>
+    <string name="start_wifi">Activate Wifi</string>
+    <string name="expired_month">You have one month remaining to use our wonderful app! </string>
+    <string name="expired_7_days">Warning, this app will be destroyed in 7 days! ;)</string>
+    <string name="expired_day">Warning, it is your last day to use VyfeApp! </string>
+    <string name="invalid_date">Invalide date</string>
+    <string name="expired_licence">Your license has expired, please contact us</string>
     <string name="save_session">Do you want to save the session?</string>
-    <string name="url">http://vyfe.co/live/356</string>
-    <string name="arrow">▼</string>
-    <string name="create_tagset_title">Create new observation grid</string>
-    <string name="free_storage">disk space available : </string>
+    <string name="free_storage">available storage : </string>
     <string name="pourcentage"> %</string>
-    <string name="fullstorage">\nMemory is full !\nSome features may encounter issues</string>
-    <string name="dont_save_session">Session cannot be recorded due to a lack of memory. \n\n Free space and try recording session again </string>
-    <string name="save_grid">Save new grid</string>
-    <string name="create_grid">Creation new observation grid</string>
-    <string name="create_grid_short">Create new grid</string>
-    <string name="create_title_video">Give a title to your video :</string>
-    <string name="edit_grid">1- Save a new observation grid</string>
+    <string name="fullstorage">\nMemory is full !\nSome features may encounter issues </string>
+    <string name="dont_save_session"> Session cannot be recorded due to a lack of memory. \n\n Free space and try recording session again </string>
+    <string name="save_grid">Save the new grid</string>
+    <string name="create_grid">Create new grid</string>
+    <string name="create_grid_short">Create grid</string>
+    <string name="create_title_video">Indicate video title :</string>
+    <string name="edit_grid">Your analysis grid</string>
     <string name="no_license_available">No license found</string>
-    <string name="problem">Authentication problem :</string>
-    <string name="tagset_title_warning">Please give your session a title AND a grid</string>
-    <string name="color_gradient_blue_dark">Violet</string>
-    <string name="color_gradient_blue_light">Bleu clair</string>
+    <string name="problem"> Authentication problem:</string>
+    <string name="title_tagSet">Please indicate a session title AND a grid</string>
+    <string name="end_upload">End of upload</string>
+    <string name="alert">Alert</string>
+    <string name="upload_contact">To access this functionality, you need to access the platform.   Contact us at www.vyfe.fr</string>
+    <string name="ok">Ok</string>
+    <string name="start_upload">Upload started</string>
+    <string name="have_internet_connection">You need an internet connection to upload your videos</string>
+    <string name="online">Video online</string>
+    <string name="upload_vimeo">Video uploaded</string>
+    <string name="tagset_title_warning">Please indicate a session title AND a grid</string>
+    <string name="create_tagset_title"> Your analysis grid</string>
+    <string name="color_gradient_blue_dark">Purple</string>
+    <string name="color_gradient_blue_light">Light Blue</string>
     <string name="color_gradient_faded_orange">Orange</string>
-    <string name="color_gradient_rosy">Rose</string>
-    <string name="color_gradient_red">Rouge</string>
-    <string name="color_gradient_blue">Bleu</string>
-    <string name="color_gradient_yellow">Jaune</string>
-    <string name="color_gradient_magenta_light">Violet Clair</string>
-    <string name="color_gradient_green_lightgreen">Vert</string>
-    <string name="color_gradient_grey">Gris</string>
-    <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tagTemplates</string>
+    <string name="color_gradient_green">Light green</string>
+    <string name="color_gradient_rosy">Pink</string>
+    <string name="color_gradient_red">Red</string>
+    <string name="color_gradient_blue">Blue</string>
+    <string name="color_gradient_yellow">Yellow</string>
+    <string name="color_gradient_magenta_light">Light purple</string>
+    <string name="color_gradient_green_lightgreen">Green</string>
+    <string name="color_gradient_grey">Grey</string>
+    <string name="grid_name_empty_warning">Please indicate a video title and an analysis grid</string>
     <string name="save_grid_info">Grid saved</string>
-    <string name="permission_request">Vyfe app need permissions to record a video. Please check your config</string>
+    <string name="permission_request">Vyfe app need permissions to record a video. Please check your configurations</string>
     <string name="camera_error">This device is not supported for video record</string>
-    <string name="change_movie">Change movie</string>
-    <string name="confirm_change_movie">Do you want to change the session?</string>
+    <string name="connection">Please login</string>
+    <string name="ask_permissions">Ask permission</string>
+    <string name="ask_permissions_message">To work properly, the application needs to use the sound, the camera and the storage of your tablet </string>
+    <string name="used_grid">Grid used: </string>
+    <string name="space" />
+    <string name="delete_session">Video deleted</string>
+    <string name="save_session_record">Video saved:</string>
+    <string name="info_movie">Video information</string>
+    <string name="ask_connection">You need to connect</string>
+    <string name="save_edit">Changes saved</string>
+    <string name="change_movie">Edit video</string>
+    <string name="confirm_change_movie">Would you like to edit the video?</string>
+    <string name="date_session">Date:</string>
+    <string name="duration_session">Duration:</string>
+    <string name="info_max_tags">Warning, if you use more than 10 tags, the feedback will not be optimal. We advise you to use a maximum of 10 tags </string>
+    <string name="off_on">Off/On : </string>
+    <string name="start_live">Launch collaborative session</string>
+    <string name="Grid">Grid</string>
+    <string name="live">Live</string>
+    <string name="add_connexion">You need an internet connection to play this video</string>
+    <string name="delete_server">Delete video from internet platform</string>
+    <string name="participants">Participants: </string>
+    <string name="observer">Viewers: </string>
+    <string name="unknow">Unknown</string>
+    <string name="delete_all">Delete session</string>
+    <string name="name_unknow">Unknown</string>
+    <string name="info_delete">You did not upload your video to the platform, if you delete it, it will not be available anymore </string>
+    <string name="havent_roles_teacher">Your profile rights are inadequate, please contact your administrator </string>
+    <string name="try_again">Try again</string>
+    <string name="connecting_internet">You need an internet connection to launch the collaborative session</string>
+    <string name="your_tagSets">Your grid analysis</string>
+    <string name="havent_tag_sets">No grid analysis</string>
+    <string name="you_have" translatable="false">You have</string>
+    <string name="tag_sets">Grid analysis</string>
+    <string name="name_tag_set">Name Grid</string>
+    <string name="delete_select">Delete selection</string>
+    <string name="select_all">Select all</string>
+    <string name="select_nothing">Remove selection</string>
+    <string name="add_tag_set">Add grid</string>
+    <string name="tag_set_selected">Selected grid:</string>
+    <string name="tag_set">Analysis grid</string>
+    <string name="save">Save</string>
+    <string name="quiet">Quit</string>
+    <string name="dont_save">You did not save your modifications</string>
+    <string name="confirm_delete_tag_sets">Are you sure you want to delete the selected grids?</string>
+
 </resources>
