firebaseRemote in Kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,5 +188,7 @@
     <string name="home">Accueil</string>
     <string name="start_video_session">Lancer une session vidéo</string>
     <string name="movies">Mes vidéos</string>
+    <string name="upload_app">Mise à jour de l\'application</string>
+    <string name="info_upload">Vous devez télécharger l\'application pour avoir accès aux nouvelles fonctionnalités</string>
 
 </resources>
