add version in burgermenu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,5 +192,6 @@
     <string name="back">Retour</string>
     <string name="upload_app">Mise à jour de l\'application</string>
     <string name="info_upload">Vous devez télécharger l\'application pour avoir accès aux nouvelles fonctionnalités</string>
+    <string name="version">Version :</string>
 
 </resources>
