--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="contact">Vous pouvez nous contacter sur : <u>www.vyfe.fr</u></string>
     <string name="create_account">Créer un compte</string>
     <string name="havent_grid">Vous n\'avez pas encore de grille</string>
-    <string name="havent_tag">Vous n\'avez pas de tagTemplates</string>
+    <string name="havent_tag">Vous n\'avez pas de tags</string>
     <string name="description_added">Description ajoutée</string>
     <string name="title">Veuillez renseigner un titre de vidéo</string>
     <string name="double_name">Nom déjà utilisé. Veuillez renseigner un nouveau nom</string>
@@ -83,7 +83,7 @@
     <string name="import_grid_arrow">Sélectionner une grille</string>
     <string name="arrow"> \ \ \ ▼</string>
     <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation :</string>
-    <string name="empty_grid">Veuiller indiquer des tagTemplates ou une grille d\'observation</string>
+    <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'observation</string>
     <string name="title_session">Titre de votre vidéo :</string>
     <string name="add_tag">Ajouter le tag</string>
     <string name="restart_session">Relancer une Session</string>
@@ -130,7 +130,7 @@
     <string name="color_gradient_magenta_light">Violet Clair</string>
     <string name="color_gradient_green_lightgreen">Vert</string>
     <string name="color_gradient_grey">Gris</string>
-    <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tagTemplates</string>
+    <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tags</string>
     <string name="save_grid_info">Grille enregistrée</string>
     <string name="permission_request">Vyfe app need permissions to record a video. Please check your config</string>
     <string name="camera_error">This device is not supported for video record</string>
